# argos-agent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  config.toml  pyproject.toml  run_agent.py  run_profile.py  setup_shell.sh
.codex/: agent-routing.md
.codex/agents/: change-reviewer.toml  docs-sync-auditor.toml  identity-memory-auditor.toml  observability-dashboard-maintainer.toml  observability-debugger.toml  presentation-creator.toml  presentation-reviewer.toml  provider-contract-guardian.toml  realtime-turn-auditor.toml  repo-structure-auditor.toml  robot-safety-auditor.toml  state-machine-diagrammer.toml  test-runner.toml  vbr-docx-writer.toml
.codex/rules/: default.rules
argos_src/: logging_config.py  openai_realtime.py  profile_config.py  resource_paths.py
argos_src/agent/: __init__.py  agent_audio.py  agent_playback.py  agent_preferences.py  agent_runtime.py  agent_state.py  agent_tools.py  bridges.py  factory.py  factory_wiring.py  gesture_runtime.py  orchestrator.py  owner_turn.py  preference_segments.py  preference_types.py  realtime_turns.py  runtime_context.py  startup.py
argos_src/audio/: __init__.py
argos_src/capabilities/: __init__.py  clients.py
argos_src/display/: __init__.py  runtime.py
argos_src/embedding_stores/: __init__.py  speaker_store.py
argos_src/employee_directory/: __init__.py  service.py
argos_src/face_recognition/: __init__.py  bearing.py  constants.py  depth_gate.py  face_recognition_service.py  models.py  pipeline.py  presence_cache.py  requirements.txt  scene_analysis.py  store.py
argos_src/helpers/: README.md  __init__.py  face_recognition_lab.py  face_registration_lab.py  list_openai_models.py  rapidfuzz_employee_lab.py  speaker_lab_common.py  speaker_recognition_lab.py
argos_src/identity/: __init__.py  constants.py  manage_identity.py  prompting.py  store.py
argos_src/identity_memory/: __init__.py  biometric_updates.py  models.py  noop.py  normalization.py  prompting.py  protocol.py  tailwag_http.py  tailwag_package.py
argos_src/images/: __init__.py
argos_src/integrations/: __init__.py  openai_models.py
argos_src/knowledge/: __init__.py  build_faiss.py  faiss_store.py
argos_src/llm/: __init__.py
argos_src/media/: __init__.py  audio_detection.py  image_encoding.py
argos_src/memory/: __init__.py  constants.py  context.py  encounters.py  live_chat.py  manage_memory.py  models.py  prompting.py  store.py
argos_src/memory_provider/: __init__.py  encounters.py  slack.py  tailwag.py
argos_src/models/: Hey_Rocky.onnx
argos_src/nav_support/: __init__.py  locations.py  timeouts.py
argos_src/observability/: __init__.py  dashboard_data.py  dashboard_server.py  latency_report.py  latency_tail.py  observability.py  pricing.py  raw_capture.py  state_observer.py  state_report.py
argos_src/prompts/: __init__.py  loader.py  personality_test_prompt.md  static_interaction_prompt.md
argos_src/provider_api/: __init__.py  client.py  deadlines.py  errors.py  factory.py  fake.py  manifest.py  models.py  namespaces.py  wire.py
argos_src/robot_api/: __init__.py  client.py  errors.py  factory.py  fake.py  models.py  motion.py  zenoh.py
argos_src/robot_bridge/: README.md  __init__.py  protocol.py
argos_src/runtime/: __init__.py  audio_admission.py  battery_state.py  interaction_topics.py  motion_locks.py
argos_src/speaker_recognition/: __init__.py  backend.py  constants.py  manage_voice.py  models.py  policy.py  service.py
argos_src/tools/: __init__.py  base.py  execution.py  registry.py  tool_ids.py
chewy_docs/documentation/: .gitkeep
config/manifests/: cody.yaml  navigation.yaml  puffle.yaml  puffle_nav.yaml
config/profiles/: cody_interaction.yaml  navigation.yaml  puffle_nav.yaml  static_interaction.yaml
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: main.tsx  styles.css
docs/: README.md  architecture.md  attention_gate.md  biometric_enrollment_lab.md  complete_setup.md  employee_directory.md  face_recognition.md  future_considerations.md  identity_memory.md  identity_store.md  interaction_display.md  launch.md  memory_provider.md  memory_store.md  observability.md  prompting_and_history.md  realtime_control_refactor_plan.md  realtime_state_machine_diagram.md  realtime_state_model.md  realtime_turn_flow.md  robot_tools.md  slack_memory.md  speaker_recognition.md  voice.md
docs/presentations/: argos_feature_presentation.html  argos_vbr_writeup.docx  argos_vbr_writeup.md
go2_identity/documentation/: go2_info.txt
resources/nav_locations/: lab.json  office.json
resources/prompts/: navigation_prompt.md  personality_test_prompt.md  (+3 more)
scripts/: __init__.py
(+221 files in other folders)
